samples/_failures_safe/1761151461_4f505d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0e23a608.c: In function ‘generate_sample_log’:
./samples/SAFE/__tmp_0e23a608.c:137:17: error: expected expression at end of input
  137 |                 hour, min, sec,
      |                 ^~~~
./samples/SAFE/__tmp_0e23a608.c:137:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0e23a608.c:137:17: error: expected declaration or statement at end of input
